[package]
name = "tc-vesting"
authors = ["Till Ziegler <tz@schoeneweide.tk>"]
description = "A Vesting Contract Specialized for Governance Approved Payrolls on Terra Classic"
edition = "2021"
license = "BSD-3-Clause"
repository = "https://github.com/fragwuerdig/tc-vesting"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-schema = "1.5.4"
cosmwasm-std = { version = "1.5.4", features = ["staking", "cosmwasm_1_3"] }
cw-ownable = "0.5"
cw-storage-plus = "1.1"
thiserror = "1.0"
wynd-utils = "0.4"
cw20 = "1.1"
cw-utils = "1.0"
cw2 = "1.1"